[package]
name = "epsilon"
version = "0.313.3"
edition = "2021"

description = "Fast autograd using dual numbers"
authors = ["loovjo"]
license = "AGPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
